Refactorings on new event bus handling